Added sorting by cgpi, api counter
